--- a/Updates.html
+++ b/Updates.html
@@ -13,7 +13,7 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
         <div class="mob_nav">
             <ol>
-                <li class="m"><a href="Ultimate Productions.html">Home</a></li><br>
+                <li class="m"><a href="index.html">Home</a></li><br>
                 <li class="active"><a href="Games.html">Games</a></li><br>
                 <li class="m"><a href="#">Git Hub</a></li><br>
                 <li class="m"><a href="#">Updates</a></li><br>
